--- a/ZoomAgent/package.json
+++ b/ZoomAgent/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "env": "^0.0.2",
-    "open": "^10.1.2",
+    "pkg": "^5.8.1",
     "ws": "^8.18.2"
   }
 }
